[package]
name = "egui_extras_lib"
version = "0.13.7"
authors = ["Ar37-rs <adyaro37@gmail.com>"]
edition = "2018"
description = "Several extras for egui"
documentation = "https://docs.rs/egui_extras_lib"
readme = "README.md"
keywords = ["gui", "egui"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ar37-rs/egui-extras-lib"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
staticlib = []

[dependencies]
egui = "0.13"
epi = "0.13"
# asynchron = { path = "asynchron" }
asynchron = "0.8"
[build-dependencies]
cfg-if = "1"